[gd_scene load_steps=2 format=3 uid="uid://dc5sqyjnwmpri"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_7ienl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ienl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 60
text = "Chaitale"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="SelectWorldButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select World"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
